--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <li>This is another list item.</li>
       <li>This is the last list item.</li>
     </ul>
-    <img src="" alt="My Image"><br>
-    <p>Click 👉<a href="https://www.linkedin.com/in/vimal-vs-620075217">here</a>👈 to check out my Linkedin profile.</p>
+    <img src="https://www.mykhel.com/img/2023/05/ms-dhoni1-1683803744.jpg" alt="My Image"><br>
+    <p>Click 👉<a href="https://www.linkedin.com/in/babu-raj-a719a8276">here</a>👈 to check out my Linkedin profile.</p>
     <p>For next page, Click <a href="layout.html" target="blank"> Page 2</a></p>
   </main>
   <footer>
